# ChangeLog for media-video/smplayer
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/ChangeLog,v 1.133 2013/05/03 16:56:44 ssuominen Exp $

*smplayer-0.8.4-r1 (03 May 2013)

  03 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  +smplayer-0.8.4-r1.ebuild:
  Use media-gfx/optipng built with internal copy of libpng15 to correct IDAT
  lenght in multiple broken PNG files in the smplayer tarball wrt #466572 by
  Tobias Klausmann

*smplayer-0.8.4 (24 Mar 2013)

  24 Mar 2013; Ben de Groot <yngwin@gentoo.org> +smplayer-0.8.4.ebuild:
  version bump

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> smplayer-0.8.3.ebuild:
  Move Qt dependencies to the new category

  06 Feb 2013; Michael Palimaka <kensington@gentoo.org> -smplayer-0.8.1.ebuild:
  Remove old.

  25 Jan 2013; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.3.ebuild:
  Stable for amd64, wrt bug #453484

  25 Jan 2013; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.3.ebuild:
  Stable for x86, wrt bug #453484

  24 Jan 2013; Jeroen Roovers <jer@gentoo.org> smplayer-0.8.3.ebuild:
  Stable for HPPA (bug #453484).

  16 Jan 2013; Ben de Groot <yngwin@gentoo.org> -smplayer-0.8.0.ebuild,
  -smplayer-0.8.2.1.ebuild, smplayer-0.8.3.ebuild:
  remove old; prefer mplayer2 (bug #452440)

*smplayer-0.8.3 (23 Dec 2012)

  23 Dec 2012; Ben de Groot <yngwin@gentoo.org> +smplayer-0.8.3.ebuild:
  version bump

  10 Dec 2012; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.2.1.ebuild:
  Add ~ppc, wrt bug #383945

*smplayer-0.8.2.1 (05 Dec 2012)

  05 Dec 2012; Michael Palimaka <kensington@gentoo.org>
  +smplayer-0.8.2.1.ebuild:
  Version bump, wrt bug #445212.

  29 Oct 2012; Jeroen Roovers <jer@gentoo.org> smplayer-0.8.1.ebuild:
  Stable for HPPA (bug #439258).

  24 Oct 2012; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.1.ebuild:
  Stable for amd64, wrt bug #439258

  24 Oct 2012; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.1.ebuild: