@@ -5,10 +5,6 @@
 	<email>hwoarang@gentoo.org</email>
 	<name>Markos Chandras</name>
 </maintainer>
-<maintainer>
-	<email>yngwin@gentoo.org</email>
-	<name>Ben de Groot</name>
-</maintainer>
 <use>
 	<flag name="branding">Replace original gnome background with one from Gentoo ten project</flag>
 	<flag name="gtk">Pull in the gtk+ greeter</flag>
